# rpg_svo

./: .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  apt-dependencies.txt  pyproject.toml  run_demo.py  setup.py
.github/scripts/: install-deps.ps1  install-deps.sh  install_sys_deps.sh
.github/workflows/: build_publish.yml
extra/fast_neon/: CMakeLists.txt
extra/vikit_common/: CMakeLists.txt
extra/vikit_common/Sophus/: CMakeLists.txt
extra/vikit_common/eigen/: CMakeLists.txt
extra/vikit_common/include/vikit/: homography.h  math_utils.h
extra/vikit_common/src/: homography.cpp  img_align.cpp  math_utils.cpp  vision.cpp
include/svo/: IMU_Preintegrator.h  config.h  depth_filter.h  frame.h  frame_handler_mono.h  global.h  reprojector.h  so3.h
src/: IMU_Data.cpp  IMU_Preintegrator.cpp  NDArrayConverter.cpp  bindings.cpp  bundle_adjustment.cpp  config.cpp  depth_filter.cpp  feature_alignment.cpp  feature_detection.cpp  frame.cpp  frame_handler_mono.cpp  matcher.cpp  reprojector.cpp  so3.cpp  sparse_img_align.cpp
src/svo_cpp/: _version.py
svo/: CMakeLists.txt  package.xml
svo/extra/: install_ubuntu_deps_incl_ceres.sh
svo/extra/fast_neon/: CMakeLists.txt  package.xml
svo/extra/fast_neon/src/: faster_corner_10_sse.cpp
svo/extra/vikit_common/: CMakeLists.txt
svo/extra/vikit_common/Sophus/: CMakeLists.txt
svo/extra/vikit_common/include/vikit/: blender_utils.h  homography.h  img_align.h  math_utils.h  nlls_solver.h
svo/extra/vikit_common/src/: homography.cpp  vision.cpp
svo/include/fast/: corner_9.h  fast.h  faster_corner_utilities.h
svo/include/svo/: frame.h  global.h  initialization.h
svo/src/: bindings.cpp  config.cpp  frame_handler_base.cpp  frame_handler_mono.cpp  initialization.cpp  map.cpp
svo/test/: test_depth_filter.cpp  test_matcher.cpp
svo_msgs/: CMakeLists.txt  package.xml
svo_msgs/msg/: Info.msg
svo_ros/: CMakeLists.txt  package.xml
svo_ros/include/svo_ros/: visualizer.h
svo_ros/launch/: live.launch  test_rig3.launch
svo_ros/param/: camera_atan.yaml  camera_pinhole.yaml  vo_accurate.yaml  vo_fast.yaml
svo_ros/src/: benchmark_node.cpp  visualizer.cpp  vo_node.cpp
test/: test_feature_alignment.cpp  test_pipeline.cpp  test_utils.h
