[build-system]
requires = ["setuptools>=42", "wheel", "cmake>=3.12", "numpy", "opencv-python", "pybind11[global]>=2.13"]
build-backend = "setuptools.build_meta"

# PEP 621 Project metadata
[project]
name = "svo_cpp"
version = "1.0.0"
description = "Semi Direct Visual Odometry with python bindings"
maintainers = [{ name = "Alex S.", email = "savaalexandru562@gmail.com" }]
license = { file = "LICENSE" } # Points to your license file
requires-python = ">=3.8"
classifiers = [
    'Intended Audience :: Developers',
    'License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)',
    'Programming Language :: C++',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    # ... other classifiers
]
dependencies = ["numpy", "opencv-python"]

[project.optional-dependencies]
test = ["pytest>=6.0", "pyyaml>=5.4", "pybind11[global]>=2.13"]

[project.urls]
"Bug Tracker" = "https://github.com/AlexandruRO45/rpg_svo/issues"
"Source" = "https://github.com/AlexandruRO45/rpg_svo/"

