[build-system]
requires = ["setuptools>=42", "wheel", "cmake>=3.12", "numpy", "opencv-python"]
build-backend = "setuptools.build_meta"

# PEP 621 Project metadata
[project]
name = "svo_cpp"
version = "1.5.0"
description = "Semi Direct Visual Odometry with python bindings"
maintainers = [{ name = "Alex S.", email = "savaalexandru562@gmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    'Intended Audience :: Developers',
    'License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)',
    'Programming Language :: C++',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Operating System :: POSIX :: Linux',
    'Topic :: Scientific/Engineering :: Image Processing',
    'Topic :: Software Development :: Libraries :: Python Modules',
]
dependencies = ["numpy>=1.19.0", "opencv-python>=4.5.0"]

[project.optional-dependencies]
test = ["pytest>=6.0", "pyyaml>=5.4"]
dev = ["pytest>=6.0", "pyyaml>=5.4", "build", "twine"]

[project.urls]
"Bug Tracker" = "https://github.com/AlexandruRO45/rpg_svo/issues"
"Source" = "https://github.com/AlexandruRO45/rpg_svo/"
"Documentation" = "https://github.com/AlexandruRO45/rpg_svo/"