<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>svo_ros</name>
  <version>0.1.0</version>
  <description>
    Monocular Visual Odometry - ROS Nodes
  </description>
  <author>Christian Forster</author>
  <maintainer email="forster@ifi.uzh.ch">Christian Forster</maintainer>
  <maintainer email="clyde@mcqueen.net">Clyde McQueen</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>nav_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>svo</depend>
  <depend>svo_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>vikit_common</depend>
  <depend>vikit_ros</depend>
  <depend>visualization_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>